--- a/GT7/GT7sezona2025.html
+++ b/GT7/GT7sezona2025.html
@@ -133,8 +133,8 @@
   </div>
 
   <!-- JS modul -->
-  <script type="module">
-    import "./GT7script.js";
-  </script>
+<script type="module">
+  import "/GT7/GT7script.js";
+</script>
 </body>
 </html>
