--- a/GT7/GT7sezona2025.html
+++ b/GT7/GT7sezona2025.html
@@ -134,7 +134,7 @@
 
   <!-- JS modul -->
 <script type="module">
-  import "https://raw.githubusercontent.com/ahosovidaho/GT7/main/GT7script.js";
+  import "https://cdn.jsdelivr.net/gh/ahosovidaho/GT7@main/GT7script.js";
 </script>
 </body>
 </html>
