--- a/GT7/GT7sezona2025.html
+++ b/GT7/GT7sezona2025.html
@@ -133,8 +133,6 @@
   </div>
 
   <!-- JS modul -->
-<script type="module">
-  import "https://cdn.jsdelivr.net/gh/ahosovidaho/GT7@main/GT7script.js";
-</script>
+ <script type="module" src="./GT7script.js"></script>
 </body>
 </html>
