--- a/GT7/GT7sezona2025.html
+++ b/GT7/GT7sezona2025.html
@@ -133,6 +133,6 @@
   </div>
 
   <!-- JS modul -->
-<script type="module" src="/GT7/GT7script.js"></script>
+<script src="GT7script.js"></script>
 </body>
 </html>
