--- a/GT7/GT7sezona2025.html
+++ b/GT7/GT7sezona2025.html
@@ -133,6 +133,9 @@
   </div>
 
   <!-- JS modul -->
+<script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.js"></script>
+<script type="module" src="GT7script.js"></script>
+  
 <script>
   import('./GT7script.js')
     .then(() => console.log('✅ Modul načten'))
